--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-builder"
+    "build": "electron-builder",
+    "buildlinux": "electron-builder --linux",
+    "buildmac": "electron-builder --mac"
   },
   "keywords": [],
   "author": "Nesu",
@@ -17,10 +19,22 @@
   "build": {
     "appId": "com.cathy.nesu",
     "win": {
-      "icon": "./icons/icon.ico"
+      "icon": "./icons/icon.ico",
+      "target": [
+        "nsis"
+      ]
     },
     "mac": {
-      "icon": "./icons/icon.icns"
+      "icon": "./icons/icon.icns",
+      "target": [
+        "dmg"
+      ]
+    },
+    "linux": {
+      "icon": "./icons/icon.png",
+      "target": [
+        "deb, appImage, snap"
+      ]
     }
   },
   "devDependencies": {
