--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Cathy",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "main.js",
   "scripts": {
@@ -33,7 +33,7 @@
     "linux": {
       "icon": "./icons/icon.png",
       "target": [
-        "deb, appImage, snap"
+        "tar.gz"
       ]
     }
   },
