--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "electron .",
     "build": "electron-builder",
     "buildlinux": "electron-builder --linux",
-    "buildmac": "electron-builder --mac"
+    "buildmac": "electron-builder --mac",
+    "buildweb": "webpack"
   },
   "keywords": [],
   "author": "Nesu",
